<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivityFlower">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Experiment" />

        <Spinner
            android:id="@+id/editTextNumberExpid"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/Experiment" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="client" />

        <Spinner
            android:id="@+id/device_id_edit_text"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/client" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/serverIP"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:hint="FL Server IP"
            android:inputType="phone"
            android:text="192.168.15.62" />

        <EditText
            android:id="@+id/serverPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="FL Server Port"
            android:inputType="numberDecimal"
            android:text="8080" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_manifold"
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Manifold Learning" />

        <LinearLayout
            android:id="@+id/LinearlayoutManifold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/n_components_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="n_components" />

                <Spinner
                    android:id="@+id/spinnern_dim_n_components"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/n_components"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="n_neig" />

                <EditText
                    android:id="@+id/editTextNumber_n_neig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="0"
                    android:inputType="number"
                    android:text="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="min_dist" />

                <EditText
                    android:id="@+id/editTextNumber_min_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0,1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/load_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#9DE1EA"
            android:onClick="loadData"
            android:text="Load Dataset" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#9DE1EA"
            android:enabled="false"
            android:onClick="connect"
            android:text="Setup Connection " />

        <Button
            android:id="@+id/trainFederated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:backgroundTint="#9DE1EA"
            android:enabled="false"
            android:onClick="runGRCP"
            android:text="Train Federated!" />

    </LinearLayout>

    <!--<Button
        android:id="@+id/button_test_baseModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="button_test_baseModel"
        android:text="Test GeralModel" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="Activity Log"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/grpc_response_text"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:background="#FAF2F2"
        android:gravity="bottom"
        android:nestedScrollingEnabled="true"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="vertical"
        android:text="Welcome to Flower! \n"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:verticalScrollbarPosition="defaultPosition" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Export Log" />

    <Button
        android:id="@+id/button_inference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Inference" />

</LinearLayout>
